--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <body class="bg-white text-center text-gray-800">
   <section class="min-h-screen flex items-center justify-center bg-gradient-to-b from-pink-200 to-white relative overflow-hidden">
+    <canvas id="fireworksCanvas" class="fixed top-0 left-0 w-full h-full z-[-1]"></canvas>
     <h1 class="text-4xl sm:text-6xl md:text-7xl font-cursive font-bold animate-scaleUp" id="Hbay"><i class="fa-solid fa-cake-candles"></i> Happy Birthday To The <br> OMODARA TWINS  </h1>
     <div class="absolute bottom-6 w-full text-center">
       <p class="text-sm animate-bounce text-gray-600">Scroll Down ↓</p>
@@ -141,6 +142,5 @@
 </section>
 
 </body>
-
-</body>
+<script src="script.js"></script>
 </html>
