--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    <body class="bg-white text-center text-gray-800">
-  <section class="min-h-screen flex items-center justify-center bg-gradient-to-b from-pink-200 to-white relative overflow-hidden">
-    <canvas id="fireworksCanvas" class="fixed top-0 left-0 w-full h-full z-[-1]"></canvas>
-    <h1 class="text-4xl sm:text-6xl md:text-7xl font-cursive font-bold animate-scaleUp" id="Hbay"><i class="fa-solid fa-cake-candles"></i> Happy Birthday To The <br> OMODARA TWINS  </h1>
-    <div class="absolute bottom-6 w-full text-center">
-      <p class="text-sm animate-bounce text-gray-600">Scroll Down ↓</p>
-    </div>
-  </section>
+<body class="bg-white text-center text-gray-800">
+
+<section class="relative w-full h-screen overflow-hidden bg-gradient-to-b from-pink-200 to-white flex items-center justify-center">
+  <canvas id="fireworksCanvas" class="absolute inset-0 w-full h-full z-0"></canvas>
+  <h1 class="text-4xl sm:text-6xl md:text-7xl font-cursive font-bold animate-scaleUp text-gray-800 z-10 text-center" id="Hbay">
+    <i class="fa-solid fa-cake-candles"></i> Happy Birthday To The <br> OMODARA TWINS
+  </h1>
+  <div class="absolute bottom-6 w-full text-center z-10">
+    <p class="text-sm animate-bounce text-gray-600">Scroll Down ↓</p>
+  </div>
+</section>
+
 
   <section class="bg-yellow-50 py-12 px-4">
   <div class="max-w-5xl mx-auto">
@@ -37,7 +40,7 @@
 
       <!-- Twin 2 -->
       <div class="flex flex-col items-center">
-        <img src="images/Ktest.jpg" alt="Daniel" class="w-64 h-64 object-cover rounded-xl shadow-lg hover:scale-105 transition duration-300">
+        <img src="images/Ktest1.jpg" alt="Daniel" class="w-64 h-64 object-cover rounded-xl shadow-lg hover:scale-105 transition duration-300">
         <p class="mt-4 text-lg font-semibold text-gray-700">REBECCA KEHINDE<br>DADA</p>
       </div>
 
