--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bday</title>
+    <title>🎉Birthday Celebration</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,18 +56,6 @@
         </div>
     </section>
 
-    <!-- <section class="bg-gradient-to-b from-white to-pink-50 py-16 px-4">
-  <div class="max-w-2xl mx-auto bg-white/70 backdrop-blur-md p-8 rounded-xl shadow-xl">
-    <h2 class="text-2xl md:text-3xl font-bold text-pink-600 mb-4 text-center">Wishes & Prayers</h2>
-    <p class="text-lg leading-relaxed text-gray-800 font-medium text-center">
-      May your new age bring more wisdom, joy, and peace.<br>
-      Thank you for sowing into my future.<br>
-      I pray blessings chase you down, and that everything you’ve done<br>
-      for others returns to you a hundredfold. 🙏🏾🎉<br><br>
-      <span class="italic">— From the heart of one you lifted</span>
-    </p>
-  </div>
-</section> -->
 
 <section class="bg-gray-50 py-16 px-4" id="jerry">
   <div class="max-w-5xl mx-auto">
@@ -80,7 +68,7 @@
       <img src="images/Jtest.jfif" alt="Jerry smiling" class="rounded-xl shadow-md object-cover w-full h-70">
       <img src="images/Jtest2.jpg" alt="Jerry thoughtful" class="rounded-xl shadow-md object-cover w-full h-70">
       <img src="images/Jtest.jfif" alt="Jerry happy" class="rounded-xl shadow-md object-cover w-full h-70">
-      <img src="images/Jtest.jfif" alt="Jerry with friends" class="rounded-xl shadow-md object-cover w-full h-70">
+      <img src="images/Screenshot_20250801-081203.jpg" alt="Jerry with friends" class="rounded-xl shadow-md object-contain w-full h-50">
     </div>
 
     <!-- Character Tribute -->
@@ -143,6 +131,73 @@
     </div>
   </div>
 </section>
+<section class="py-12 bg-gray-100" id="achievements">
+  <div class="max-w-6xl mx-auto px-4">
+    <h2 class="text-3xl font-bold text-center text-gray-800 mb-10">Achievements</h2>
+
+    <div class="grid gap-8 md:grid-cols-3 sm:grid-cols-2">
+      
+      <!-- Card 1 -->
+      <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <img src="images/education.jfif" alt="Mentorship" class="w-full h-48 object-cover">
+        <div class="p-5">
+          <h3 class="text-xl font-semibold text-gray-800">Mentored 50+ Students</h3>
+          <p class="text-gray-600 mt-2">Guided and sponsored aspiring students to grow further and pursue their dreams and careers.</p>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <img src="images/community2.jpg" alt="Community Work" class="w-full h-48 object-cover">
+        <div class="p-5">
+          <h3 class="text-xl font-semibold text-gray-800">🏘️Community Builder</h3>
+          <p class="text-gray-600 mt-2"> Not many know, but Jerry Omodara’s influence extends beyond security — he’s a strategic force in community development across Kogi State.
+      From empowering local structures to supporting youth engagement initiatives, his efforts reflect a leadership style rooted in <span class="italic">people-first development</span>.</p>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <img src="images/leader.jfif" alt="Leadership" class="w-full h-48 object-cover">
+        <div class="p-5">
+          <h3 class="text-xl font-semibold text-gray-800">Leadership with Vision</h3>
+          <p class="text-gray-600 mt-2">Respected for his integrity and leadership traits exhibited in times of challenge, and admired for the vision that guides progress beyond the present. 
+        </div>
+      </div>
+
+      <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <img src="images/security.jpg" alt="Security" class="w-full h-48 object-cover">
+        <div class="p-5">
+          <h3 class="text-xl font-semibold text-gray-800">🏅 Award-Winning Peace Builder</h3>
+          <p class="text-gray-600 mt-2">Credited with restoring Kogi from insecure to one of Nigeria’s safer states — earning several recognition awards.</p>
+        </div>
+      </div>
+
+      <div class="bg-white rounded-lg shadow-md p-4 mb-4 border-l-4 border-green-600">
+  <h3 class="text-xl font-semibold text-green-700">The Omodara Security Model</h3>
+  <p class="text-gray-700 mt-1">
+    Not everyone knows this, but Commander Jerry Omodara pioneered a unique community-based approach to security now studied and admired across Nigeria. 
+  </p>
+</div>
+
+
+    </div>
+  </div>
+
+      <section class="bg-gradient-to-b from-white to-pink-50 py-16 px-4">
+  <div class="max-w-2xl mx-auto bg-white/70 backdrop-blur-md p-8 rounded-xl shadow-xl">
+    <h2 class="text-2xl md:text-3xl font-bold text-pink-600 mb-4 text-center">Wishes & Prayers</h2>
+    <p class="text-lg leading-relaxed text-gray-800 font-medium text-center">
+      May your new age bring more wisdom, joy, and peace.<br>
+      Thank you for sowing into my future.<br>
+      I pray blessings chase you down, and that everything you’ve done<br>
+      for others returns to you a hundredfold. 🙏🏾🎉<br><br>
+      <span class="italic">— From the heart of one you lifted</span>
+    </p>
+  </div>
+</section>
+</section>
+
 
 </body>
 <script src="script.js"></script>
